--- a/code-ide-backend/package.json
+++ b/code-ide-backend/package.json
@@ -15,8 +15,9 @@
     "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.19.2",
     "fs-extra": "^11.3.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.17.1"
   }
 }
