fix: Add Node types and fix unused variables

--- a/code-ide/tsconfig.json
+++ b/code-ide/tsconfig.json
@@ -16,7 +16,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "typeRoots": ["./node_modules/@types"],
-    "types": ["react", "react-dom", "three"]
+    "types": ["react", "react-dom", "three", "node"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
