--- a/code-ide-backend/package.json
+++ b/code-ide-backend/package.json
@@ -13,10 +13,12 @@
   "description": "Backend for online code IDE that executes code in Docker containers",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@types/three": "^0.176.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "fs-extra": "^11.3.0",
+    "three": "^0.176.0",
     "uuid": "^11.1.0",
     "ws": "^8.17.1"
   }
